--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         }
 
         // Lấy kết quả từ bot thông qua API
-        fetch("http://localhost:10000/offset", {
+        fetch("https://finderoffset.onrender.com/offset", {
     method: "POST",
     headers: { "Content-Type": "application/json" },
     body: JSON.stringify({ offset: offset })
